Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2001,8 +2001,8 @@
     "    std_range_width = range_width / 10\n",
     "    print(std_range_width)\n",
     "    #Your code here\n",
-    "    train_y_hatX['predict'] = [predict_class(row, std_range_width) for row, row_data in train_X.iterrows()]\n",
-    "    test_X['predict'] = [predict_class(row, std_range_width) for row, row_data in test_X.iterrows()]\n",
+    "    train_y_hat = [predict_class(row, std_range_width) for row, row_data in train_X.iterrows()]\n",
+    "    test_y_hat = [predict_class(row, std_range_width) for row, row_data in test_X.iterrows()]\n",
     "\n",
     "    #Your code here\n",
     "    train_accuracy = train_X['predict'] == train_y\n",
