Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2005,7 +2005,7 @@
     "    test_y_hat = [predict_class(row, std_range_width) for row, row_data in test_X.iterrows()]\n",
     "\n",
     "    #Your code here\n",
-    "    train_accuracy = train_X['predict'] == train_y\n",
+    "    train_accuracy = train_y_hat == train_y\n",
     "    test_accuracy = test_X['predict'] == test_y\n",
     "    print('Train accuracy: ', sum(train_accuracy) / len(train_accuracy))\n",
     "    print('Test accuracy: ', sum(test_accuracy) / len(test_accuracy))\n"
