Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2006,7 +2006,7 @@
     "\n",
     "    #Your code here\n",
     "    train_accuracy = train_y_hat == train_y\n",
-    "    test_accuracy = test_X['predict'] == test_y\n",
+    "    test_accuracy = tes_y_hat == test_y\n",
     "    print('Train accuracy: ', sum(train_accuracy) / len(train_accuracy))\n",
     "    print('Test accuracy: ', sum(test_accuracy) / len(test_accuracy))\n"
    ]
