--- a/index.ipynb
+++ b/index.ipynb
@@ -1953,19 +1953,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.1\n"
+      "0.1\n",
+      "Train accuracy:  0.47783251231527096\n",
+      "Test accuracy:  0.46\n"
      ]
     }
    ],
    "source": [
-    "for range_width in range(1, 2):\n",
+    "for range_width in range(1, 5):\n",
     "    std_range_width = range_width / 10\n",
     "    print(std_range_width)\n",
     "    #Your code here\n",
