--- a/index.ipynb
+++ b/index.ipynb
@@ -1960,7 +1960,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.1\n"
+      "0.1\n",
+      "Train accuracy:  0.47783251231527096\n",
+      "Test accuracy:  0.46\n",
+      "0.2\n"
      ]
     }
    ],
