--- a/index.ipynb
+++ b/index.ipynb
@@ -1953,7 +1953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1963,7 +1963,9 @@
       "0.1\n",
       "Train accuracy:  0.47783251231527096\n",
       "Test accuracy:  0.46\n",
-      "0.2\n"
+      "0.2\n",
+      "Train accuracy:  0.47783251231527096\n",
+      "Test accuracy:  0.46\n"
      ]
     }
    ],
