Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1953,14 +1953,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.9\n"
+      "1.9\n",
+      "Train accuracy:  0.4827586206896552\n",
+      "Test accuracy:  0.45\n"
      ]
     }
    ],
