Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1955,7 +1955,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n",
+      "Train accuracy:  0.4729064039408867\n",
+      "Test accuracy:  0.46\n",
+      "1.1\n"
+     ]
+    }
+   ],
    "source": [
     "for range_width in range(10, 12):\n",
     "    std_range_width = range_width / 10\n",
