Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1953,7 +1953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1963,7 +1963,9 @@
       "1.0\n",
       "Train accuracy:  0.4729064039408867\n",
       "Test accuracy:  0.46\n",
-      "1.1\n"
+      "1.1\n",
+      "Train accuracy:  0.47783251231527096\n",
+      "Test accuracy:  0.46\n"
      ]
     }
    ],
